@startuml

title __L2's Class Diagram__\n

  package  {
    package audioOutputs {
      abstract class AudioOutput {
      }
    }
  }
  

  package  {
    package builders {
      abstract class AudioOutputBuilder {
      }
    }
  }
  

  package  {
    package audioOutputs {
      class AudioOutputTests {
      }
    }
  }
  

  package  {
    package builders {
      class FancyHeadphonesBuilder {
      }
    }
  }
  

  package  {
    package builders {
      class FancyRadioBuilder {
      }
    }
  }
  

  package  {
    package builders {
      class FancySpeakersBuilder {
      }
    }
  }
  

  package  {
    package audioOutputs {
      class Headphones {
      }
    }
  }
  

  package  {
    package audioOutputs {
      class HeadphonesTests {
      }
    }
  }
  

  package  {
    package builders {
      class HiFiSystem {
      }
    }
  }
  

  package  {
    package builders {
      class HiFiSystemTests {
      }
    }
  }
  

  package  {
    class Main {
    }
  }
  

  package  {
    package audioOutputs {
      class Radio {
      }
    }
  }
  

  package  {
    package audioOutputs {
      class RadioState {
      }
    }
  }
  

  package  {
    package audioOutputs {
      class RadioTests {
      }
    }
  }
  

  package  {
    package builders {
      class SimpleHeadphonesBuilder {
      }
    }
  }
  

  package  {
    package builders {
      class SimpleRadioBuilder {
      }
    }
  }
  

  package  {
    package builders {
      class SimpleSpeakersBuilder {
      }
    }
  }
  

  package  {
    package audioOutputs {
      class Speakers {
      }
    }
  }
  

  package  {
    package audioOutputs {
      class SpeakersTests {
      }
    }
  }
  

  AudioOutput -up-|> Serializable
  AudioOutputBuilder -up-|> Serializable
  AudioOutputBuilder o-- AudioOutput : audioOutput
  FancyHeadphonesBuilder -up-|> AudioOutputBuilder
  FancyRadioBuilder -up-|> AudioOutputBuilder
  FancySpeakersBuilder -up-|> AudioOutputBuilder
  Headphones -up-|> AudioOutput
  HiFiSystem -up-|> Serializable
  HiFiSystem -up-|> Runnable
  HiFiSystem o-- AudioOutputBuilder : audioOutputBuilder
  HiFiSystem o-- RadioState : radioState
  Radio -up-|> Runnable
  Radio -up-|> AudioOutput
  Radio o-- RadioState : radioState
  SimpleHeadphonesBuilder -up-|> AudioOutputBuilder
  SimpleRadioBuilder -up-|> AudioOutputBuilder
  SimpleSpeakersBuilder -up-|> AudioOutputBuilder
  Speakers -up-|> AudioOutput


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
